--- a/index.css
+++ b/index.css
@@ -12,12 +12,12 @@ header {
 
 main {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: row; wrap;
   justify-content: center;
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
-  align-content: center;
+
 }
 
 footer {
