--- a/index.css
+++ b/index.css
@@ -12,11 +12,12 @@ header {
 
 main {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  flex-flow: column; wrap;
+  align-content:  center;
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
+  flex-basis: 100px;
 
 }
 
