--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ header {
 main {
   display: flex;
   flex-flow: column; wrap;
-  align-content:  center;
+  align-items: :  center;
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
