--- a/index.css
+++ b/index.css
@@ -17,8 +17,11 @@ main {
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
+}
 
-
+.setWidth {
+  flex-basis: 100px;
+  flex-grow: 1;
 }
 
 footer {
